<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    app:cardMaxElevation="10dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <!-- In the above cardview widget cardelevation property will give elevation to your card view
        card corner radius will provide radius to your card view card background color will give
        background color to your card view card max elevation will give the cardview maximum
        elevation card prevent corner overlap will add padding to CardView on v20 and before to
        prevent intersections between the Card content and rounded corners. Card use compact padding
        will add padding in API v21+ as well to have the same measurements with previous versions -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <!-- Text View to display Course Name -->
        <TextView
            android:id="@+id/client"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:inputType="textMultiLine"
            android:text="@string/ReqUser"
            android:textColor="@color/teal_700"
            android:textSize="18dp"
            android:textStyle="bold" />

        <!-- Text VIew to display Course Rating -->
        <!-- Image used in present in drawable folder -->

        <TextView
            android:id="@+id/type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/client"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:inputType="textMultiLine"
            android:text="@string/ReqApp"
            android:textColor="@color/teal_700"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/timing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/type"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"

            android:inputType="textMultiLine"
            android:text="@string/history_time"
            android:textColor="@color/teal_700"
            android:textSize="18dp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/layout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@id/timing"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/money"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/money"/>

            <TextView
            android:id="@+id/appointment_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/history_rate"
            android:inputType="textMultiLine"
            android:textColor="@color/teal_700"
            android:textSize="18dp"
            android:textStyle="bold" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/layout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout3"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/star"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/star"/>

            <TextView
                android:id="@+id/Rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/RevR"
                android:inputType="text"
                android:textColor="@color/teal_700"
                android:textSize="18dp"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>
</androidx.cardview.widget.CardView>