<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="About us"
        android:textColor="@color/teal_700"
        android:textStyle="bold"
        android:textSize="25sp"
        android:fontFamily="@font/acme"
        android:textAlignment="center"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:fontFamily="@font/abeezee"
        android:text="@string/aboutus"
        android:textAlignment="center"
        android:textColor="#757B7E"
        android:textSize="19dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        android:fontFamily="@font/abeezee"
        android:text="@string/aboutus1"
        android:textAlignment="center"
        android:textColor="#757B7E"
        android:textSize="19dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:fontFamily="@font/acme"
        android:text="@string/query"
        android:textAlignment="center"
        android:textColor="#40A197"
        android:textSize="22dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:fontFamily="@font/acme"
        android:text="@string/email"
        android:textAlignment="center"
        android:textColor="#40A197"
        android:textSize="22dp" />



    <!--    <com.google.android.material.textfield.TextInputLayout-->
    <!--        android:layout_marginTop="10dp"-->
    <!--        android:id="@+id/newpass"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_gravity="center">-->

    <!--        <EditText-->
    <!--            android:background="@color/white"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:textSize="15sp"-->
    <!--            android:textStyle="bold"-->
    <!--            android:id="@+id/newpassword"-->
    <!--            android:inputType="textPassword"-->
    <!--            android:hint="New Password"/>-->


    <!--    </com.google.android.material.textfield.TextInputLayout>-->

    <!--    <com.google.android.material.textfield.TextInputLayout-->
    <!--        android:layout_marginTop="10dp"-->
    <!--        android:id="@+id/retypepass"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_gravity="center">-->

    <!--        <EditText-->
    <!--            android:background="@color/white"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:textSize="15sp"-->
    <!--            android:textStyle="bold"-->
    <!--            android:id="@+id/retypepassword"-->
    <!--            android:inputType="textPassword"-->
    <!--            android:hint="Re-type New Password"/>-->


    <!--    </com.google.android.material.textfield.TextInputLayout>-->

    <Button
        android:id="@+id/close"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/btn_green"
        android:backgroundTint="#ffff"
        android:text="Close"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center"/>

</LinearLayout>