<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CGDashBoardActivity"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/nav_view"
        android:layout_gravity="start"
        app:menu="@menu/nav_menu"
        app:itemIconTint="#025043"
        app:itemTextColor="#025043"/>

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:orientation="vertical"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent">-->

<!--        <androidx.constraintlayout.widget.ConstraintLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content">-->

<!--            <ImageView-->
<!--                android:id="@+id/imageView2"-->
<!--                android:layout_width="80dp"-->
<!--                android:layout_height="74dp"-->
<!--                android:layout_marginTop="48dp"-->
<!--                android:layout_marginEnd="32dp"-->
<!--                android:layout_marginBottom="48dp"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="parent"-->
<!--                app:srcCompat="@drawable/ic_my_icon" />-->

<!--            <TextView-->
<!--                android:id="@+id/textView"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/goodmorning"-->
<!--                android:textColor="#ffffff"-->
<!--                android:textSize="25sp"-->
<!--                android:textStyle="bold"-->
<!--                app:layout_constraintBottom_toBottomOf="@+id/imageView2"-->
<!--                app:layout_constraintEnd_toStartOf="@+id/imageView2"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="@+id/imageView2" />-->
<!--        </androidx.constraintlayout.widget.ConstraintLayout>-->
<!--    </LinearLayout>-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@drawable/border"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/backgroundimage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/bgimage1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent=".30"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.appcompat.widget.Toolbar
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/toolbar"
            android:background="#00008577"
            android:minHeight="?attr/actionBarSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ToolbarTheme"
            app:titleTextColor="@android:color/white">


        </androidx.appcompat.widget.Toolbar>

<!--        <androidx.appcompat.widget.Toolbar-->
<!--            android:id="@+id/toolbar1"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:background="#00008577"-->
<!--            android:minHeight="?attr/actionBarSize"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            app:navigationIcon="@drawable/menuaction"/>-->



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="135dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bacground"
        app:layout_constraintTop_toBottomOf="@id/backgroundimage"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toTopOf="@id/constraint">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="70dp"
            android:layout_height="63dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.972"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/heart8" />

        <TextView
            android:id="@+id/editTextTextMultiLine"
            android:layout_width="241dp"
            android:layout_height="82dp"
            android:ems="10"
            android:fontFamily="@font/aleo_italic"
            android:inputType="textMultiLine"
            android:text="@string/quote"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView3"
            app:layout_constraintHorizontal_bias="0.307"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.32" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="123dp"
            android:layout_height="29dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/epilogue_bold"
            android:text="@string/author"
            android:textColor="@color/white"
            android:textSize="14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.563"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

        <!--    <ImageView-->
<!--        android:id="@+id/logo"-->
<!--        android:layout_width="103dp"-->
<!--        android:layout_height="86dp"-->
<!--        android:layout_marginBottom="69dp"-->
<!--        android:src="@drawable/ic_my_icon"-->
<!--        app:layout_constraintBottom_toBottomOf="@+id/backgroundimage"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.881"-->
<!--        app:layout_constraintStart_toEndOf="@+id/textView"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="1.0" />-->

        <TextView
            android:id="@+id/User"
            android:layout_width="154dp"
            android:layout_height="28dp"
            android:layout_marginStart="232dp"
            android:layout_marginTop="107dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="84dp"
            android:fontFamily="@font/aleo_bold_italic"
            android:text="@string/user"
            android:textColor="@color/white"
            android:textSize="25dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/backgroundimage"
            app:layout_constraintEnd_toEndOf="@+id/backgroundimage"
            app:layout_constraintHorizontal_bias="0.284"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/backgroundimage"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="93dp"
            android:layout_height="25dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/abeezee_italic"
            android:text="@string/goodmorning"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/User"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.734"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@id/constraint"
        android:layout_width="342dp"
        android:layout_height="283dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".78"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.983">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/requests"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="50dp"
                    android:background="@drawable/schedule" />

                <TextView
                    android:layout_width="67dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/abeezee"
                    android:text="@string/setup"
                    android:textAlignment="center"
                    android:textColor="#2a777d"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/clientreviews"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/team" />

                <TextView
                    android:layout_width="81dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/abeezee"
                    android:text="@string/Rating"
                    android:textAlignment="center"
                    android:textColor="#2a777d"
                    android:textSize="15dp"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/gighistory"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="50dp"
                    android:background="@drawable/historybook" />

                <TextView
                    android:layout_width="63dp"
                    android:layout_height="37dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/abeezee"
                    android:text="@string/History"
                    android:textAlignment="center"
                    android:textColor="#2a777d"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/new_request"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/booking" />

                <TextView
                    android:layout_width="64dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/abeezee"
                    android:text="@string/appointment"
                    android:textAlignment="center"
                    android:textColor="#2a777d"
                    android:textSize="15dp"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/editprofile"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/account" />

                <TextView
                    android:layout_width="63dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/abeezee"
                    android:text="@string/Edit"
                    android:textAlignment="center"
                    android:textColor="#2a777d"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/faq"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="50dp"
                    android:background="@drawable/faq1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/abeezee"
                    android:text="@string/FAQ"
                    android:textAlignment="center"
                    android:textColor="#2a777d"
                    android:textSize="15dp"
                    android:textStyle="bold" />


            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.drawerlayout.widget.DrawerLayout>